--- a/index.css
+++ b/index.css
@@ -4,9 +4,10 @@ html, body{
 }
 
 .text-holder {
-	padding: 2px;
+	padding: 5px;
 	border: 1px solid black;
 	display: inline-block;
+	cursor: default;
 }
 
 .innerbox {
