--- a/index.css
+++ b/index.css
@@ -8,13 +8,36 @@ html, body {
 }
 
 .text-holder {
-	padding: 5px;
-	border: 1px solid black;
+	background-color: #fff;
+	border: 1px solid #d5d9d9;
+	border-radius: 8px;
+	box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+	box-sizing: border-box;
+	color: #0f1111;
+	cursor: pointer;
 	display: inline-block;
-	cursor: default;
-	border-radius: 5px;
-	margin: 3px;
-	margin-bottom: 20px;
+	font-family: "Amazon Ember",sans-serif;
+	font-size: 13px;
+	line-height: 29px;
+	padding: 0 10px 0 11px;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	vertical-align: middle;
+	margin-bottom: 10px;
+}
+
+.text-holder:hover {
+  background-color: #f7fafa;
+}
+
+.text-holder:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
 }
 
 .innerbox {
